<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_houseinfo"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_action_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_action_orders"
            android:title="@string/meorders" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/ic_action_payment"
            android:title="@string/payment" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_action_notifications"
            android:title="@string/noitificationRU" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/preferencesRU" />
    </group>



</menu>
