<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/some_id"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".SignINActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="430dp"
        android:contentDescription="TODO"
        android:rotation="90"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/main_icon" />

    <EditText
        android:id="@+id/editText_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        android:ems="10"
        android:gravity="left|center_vertical"
        android:hint="@string/enterphone_text"
        android:inputType="phone"
        android:text="@string/plus7"
        android:textColor="@color/phonenumber_text_color"
        app:layout_constraintBottom_toTopOf="@+id/button_getsms"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:text="@string/plus7" />

    <EditText
        android:id="@+id/editText_cod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        android:ems="10"

        android:gravity="left|center_vertical"
        android:hint="@string/entercod"
        android:inputType="number"
        android:textColor="@color/phonenumber_text_color"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resendButton" />

    <Button
        android:id="@+id/button_getsms"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/roundedbutton"

        android:text="@string/takesmscod_text"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_green_dark"
        android:textColorLink="@color/buttons_recom_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/notsmstext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_phone" />

    <Button
        android:id="@+id/button_sendcod"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/roundedbutton"

        android:text="@string/sendcod_text"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue"
        android:textColorLink="@color/buttons_recom_color"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_cod" />

    <TextView
        android:id="@+id/notsmstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"

        android:shadowColor="@color/common_google_signin_btn_text_light_default"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/notsms_text"
        android:textColor="@color/phonenumber_text_color"
        android:textStyle="normal|bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editText_cod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_getsms"
        tools:text="@string/notsms_text" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <Button
        android:id="@+id/resendButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"

        android:gravity="center_horizontal|top"
        android:padding="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:shadowColor="@color/blue_medium"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/repeat_sms"
        android:textAllCaps="false"
        android:textColor="@color/buttons_recom_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notsmstext" />




</androidx.constraintlayout.widget.ConstraintLayout>